Revision history for Perl extension App::Sqitch

0.971

0.970 2013-05-09T00:21:06Z
     - Fixed the default ordering of changes displayed by the `plan` command.
       They are now ascending by default.
     - Switched to PerlIO::utf8_strict for fast character encoding and
       decoding.
     - The help emitted when an unknown option is passed to `sqitch` now
       consists of a usage statement and brief table of options, rather than
       the entire man page.
     - Added the project name in a header to the output of the `plan` command.
     - Added the Oracle engine.
     - Added `sqitchtutorial-oracle.pod`, a Oracle-specific variant of
       `sqitchtutorial.pod`.
     - Added missing version declaration to the App::Sqitch::Plan::* modules.
     - Devel::StackTrace 1.30 is now properly required (it was previously
       recommended).
     - The `--show-tags` and `--show-changes` options to the `status` command
       now show the changes when the project plan cannot be found (issue #90).

0.965  2013-04-23T16:25:59Z
     - Fixed failing test due to line-ending character variations on Windows.
       Many thanks to Jan Dubois for the testing help.
     - Replaced all uses of `$/` in output to `"\n"`. Thanks to Jan Dubois for
       pointing out the incorrect use of `$/`.
     - Fixed build error that prevented installation on Perl 5.10 when the
       parent module was not installed.

0.964  2013-04-15T18:47:30Z
     - Fixed test failures on Perl versions lower than 5.14 when DBD::SQLite
       or DBD::Pg is not installed.
     - Removed DBD::SQLite from the list of build dependencies.
     - Fixed test failures due to encoded (wide-character) warnings on
       triggered on systems with non-english locales. Thanks to Alexandr
       Ciornii for the smoke testing that revealed this issue.
     - Removed overriding of Throwable's `previous_exception` in
       App::Sqitch::X on Throwable 0.200007 and higher, where it is no longer
       needed.