@@ -1,6 +1,9 @@
 Revision history for Perl extension App::Sqitch
 
 0.971
+     - Removed most uses of the smartmatch operator, since as of Perl 5.17.11
+       it is marked as experimental, and silenced the warning where it is
+       still used.
 
 0.970 2013-05-09T00:21:06Z
      - Fixed the default ordering of changes displayed by the `plan` command.
